edit directory structure
